--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
     "react": "18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0"
   }
 }
